- Removed a bug where cron jobs sometimes didn't execute right on time.
- Added Tank and Caller Info to Raid Spam.
- Added Ability to kick all users in PG that arnt in Raid.
- Some Bug Fixes and Spelling Corrections in Raid mod.
- Make it so you goto be in PG to join Raid, can be disable in settings and only applies to AO game.
- Roster Module now Supports use of dimension name for AO
- Added waypoint support to rally
- Added a General queue module Changed chatqueue buddy_queue and masmsg (invites) to use

API Changes:
- Moved aochat event handling out of Main.php and in to AOChat.php
- Added signal events to AOChat events
- Added third optional parameter $header (bol TRUE/FALSE) to make_blob displaying VhaBot like terminal header. Shamelessly borrowed from VhaBot. Defaults to TRUE
- Added fourth optional parameter $strip (bol TRUE/FALSE) to chatcmd to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
- Added sixth optional parameter $strip (bol TRUE/FALSE) to make_item to allow stripping of all formatting for the actual link. This allows custom formatting of links. Defaults to FALSE.
- chatcmd() now allows / as $origin parameter and will not prefix the chatcmd in any way.
- Added this->bot->core("tools")->my_rand($min=false, $max=false) wrapper to call random number generator.

New Modules:
- Added AdminsUI Module to allow members to easily see the admin list, which also shows alts and status

+Possible BREAKAGE! - Peliminary testing shows modules appear to be working as expected.
+- Moving from Status array to BotError. This WILL cause breakage until the checks have been converted aswell.
+- Moving uid/uname cache from AOChat to core/PlayerList.php. Calls to core("chat")->get_u* are now depricated and PlayerList does return BotError on failures.
+- rosterupdate seems to output alot of errors todo with failed to get whois (confirmed by luyu)
 
+Known breakage